--- a/bank.html
+++ b/bank.html
@@ -9,6 +9,6 @@
   <style>
  </style>
  <img>
-    <img src="https://i.ibb.co/dKGdh1b/269899593-249596260578615-6492394415758561031-n.jpg" width="400"></img>
+    <img src="nhập link ảnh" width="400"></img>
 </body>
 </html>
