--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
       <meta charset ="UTF-8">
-      <title>NGUYỄN MINH THUẬN</title>
+      <title>Nguyen Minh Thuan</title>
       <script src="https://kit.fontawesome.com/d9f0bcb2c0.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="index.css">
     </head>
@@ -15,12 +15,12 @@
       <!-- thuan dep trai s1tg -->
       <h2>Front-end Developer and Graphic Designer</h2>
       <div class="socical">
-          <!-- thuan dep trai s1tg -->
         <a href="https://www.facebook.com/15thang11"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/nmthua.n/"><i class="fab fa-instagram"></i></a>
         <a href="bank.html"><i class="fas fa-university"></i></a>
         <a href="https://www.youtube.com/channel/UCrp9j0diaf7YlONb1wyDHMg"><i class="fab fa-youtube"></i></a>
         </div>
+         <!-- thuan dep trai s1tg -->
         <button>Contact Me</button>
       </div>
   </body>
