--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="https://www.facebook.com/15thang11"><i class="fab fa-facebook"></i></a>
         <a href="https://www.instagram.com/nmthua.n/"><i class="fab fa-instagram"></i></a>
         <a href="bank.html"><i class="fas fa-university"></i></a>
-        <a href="https://www.youtube.com/channel/UCrp9j0diaf7YlONb1wyDHMg"><i class="fab fa-youtube"></i></a>
+        <a href=""><i class="fab fa-youtube"></i></a>
         </div>
          <!-- thuan dep trai s1tg -->
         <button>Contact Me</button>
